package Enums;

public enum MaterialsName {
    LUNIT, ANTILUNIT
}
