public interface Existing {
    public String getLocation();
    public void setLocation(String location);
}
