package Interfaces;

import Enums.MaterialsName;

public interface Called {
    public String getName();
    public void setName(String name);
}
