package Interfaces;

public interface Objectable extends Movable, Called, Existing{
}
