public interface Movable {
    public void move(String newLocation);
}
